[tool.black]
line-length = 79
[build-system]
requires = ["setuptools", "poetry"]
build-backend = "poetry.masonry.api"
[tool.poetry]
name = "qs_cfn_lint_rules"
version = "0.0.4"
description = "checks CloudFormation templates against AWS Quick Start contributors guide rules"
license = "Apache License 2.0"
keywords = ["aws,", "lint,", "aws-qs_cfn_lint_rules"]
classifiers = ["Development Status :: 3 - Alpha", "Intended Audience :: Developers", "License :: OSI Approved :: Apache Software License", "Natural Language :: English", "Operating System :: OS Independent", "Programming Language :: Python :: 2", "Programming Language :: Python :: 2.7", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.4", "Programming Language :: Python :: 3.5", "Programming Language :: Python :: 3.6", "Programming Language :: Python :: 3.7"]
homepage = "https://github.com/aws-quickstart/qs-cfn-lint-rules"
authors = ["AWS Quick Start team <qs_cfn_lint_rules-eng@amazon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "*"
cfn-lint = "<0.67.0,>=0.16.0"
policyuniverse = "<2,>=1.3.5"
pyspellchecker = ">=0.6.2,<1.0.0"

[tool.poetry.scripts]
wrapped-cfn-lint = 'qs_cfn_lint_rules.cfnlint_exit_code_wrapper:main'
files-are-cfn = 'qs_cfn_lint_rules.files_are_cfn:main'
